--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen *:80;
-    server_name 158.160.55.155, 127.0.0.1;
+    listen 80;
+    server_name 158.160.55.155;
     server_tokens off;
     client_max_body_size 10m;
     root /var/html/;
