--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,10 +7,11 @@ coreschema==0.0.4
 cryptography==36.0.0
 defusedxml==0.7.1
 Django==2.2.19
-django-cors-headers==3.13.0
+django-colorfield
+django-cors-headers
 django-environ==0.8.1
-django-filter==21.1
-django-psycopg2-extension==0.1.1
+django-filter
+django-psycopg2-extension
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
