--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,15 +1,8 @@
 version: '3.3'
 services:
 
-  frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
-    volumes:
-      - ../frontend/:/app/result_build/
-
   db:
-    image: postgres:13.0-alpine
+    image: postgres:13-alpine
     restart: always
     volumes:
       - db_value:/var/lib/postgresql/data/
@@ -19,10 +12,6 @@ services:
   backend:
     image: lanaremenyuk/foodgram:latest
     restart: always
-    command: >
-      bash -c "python manage.py migrate &&
-      python manage.py collectstatic --noinput &&
-      gunicorn --bind 0:8000 foodgram.wsgi"
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
@@ -30,6 +19,15 @@ services:
       - db
     env_file:
       - ./.env
+
+  frontend:
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    volumes:
+      - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
 
   nginx:
     image: nginx:1.19.3
