--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -21,9 +21,7 @@ services:
       - ./.env
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: lanaremenyuk/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
