--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-extra-fields==3.2.1
 drf-yasg==1.20.0
+drf_yasg
 flake8==4.0.1
 flake8-isort==4.1.1
 gunicorn==20.1.0
