--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,20 +1,15 @@
 server {
     listen 80;
     server_name 158.160.55.155;
-    server_tokens off;
-    client_max_body_size 10m;
-    root /var/html/;
-
-    location /static/admin/ {
-        autoindex on;
-    }
 
     location /media/ {
         autoindex on;
+        alias /media/;
     }
 
-    location /static/rest_framework/ {
-        autoindex on;
+    location /static/admin/ {
+	      autoindex on;
+	      alias /static/admin/;
     }
 
     location /api/docs/ {
@@ -23,16 +18,12 @@ server {
     }
 
     location /api/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://backend:8000;
     }
-
     location /admin/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
         proxy_pass http://backend:8000/admin/;
     }
 
@@ -40,10 +31,16 @@ server {
         root /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
-      }
-
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+    }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
         root   /var/html/frontend/;
-      }
+    }
+    client_max_body_size 20m;
+    server_tokens off;
+
 }
