--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - ./.env
 
   backend:
-    image: lanaremenyuk/foodgram:latest
+    build:
+      context: ../backend
     restart: always
     command: >
       bash -c "python manage.py migrate &&
@@ -28,7 +29,8 @@ services:
       - ./.env
 
   frontend:
-    image: lanaremenyuk/foodgram_frontend:latest
+    build:
+      context: ../frontend
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
