pochti vsyo pochinila

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,15 +1,22 @@
 server {
     listen 80;
-    server_name 158.160.55.155;
+    server_name 158.160.55.155, localhost;
+    server_tokens off;
+    client_max_body_size 10m;
+
+    location /static/admin/ {
+        autoindex on;
+        root /var/html/;
+    }
 
     location /media/ {
         autoindex on;
-        alias /media/;
+        root /var/html/;
     }
 
-    location /static/admin/ {
-	      autoindex on;
-	      alias /static/admin/;
+    location /static/rest_framework/ {
+        autoindex on;
+        root /var/html/;
     }
 
     location /api/docs/ {
@@ -18,12 +25,16 @@ server {
     }
 
     location /api/ {
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
         proxy_pass http://backend:8000;
     }
+
     location /admin/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
         proxy_pass http://backend:8000/admin/;
     }
 
@@ -31,16 +42,10 @@ server {
         root /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-    }
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /var/html/frontend/;
-    }
-    client_max_body_size 20m;
-    server_tokens off;
+      }
 
+      error_page   500 502 503 504  /50x.html;
+      location = /50x.html {
+        root   /var/html/frontend/;
+      }
 }
