--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - ./.env
 
   backend:
-    image: lanaremenyuk/foodgram:latest
+    build:
+      context: ../backend
     restart: always
     command: >
       bash -c "python manage.py migrate &&
@@ -41,9 +42,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      #- ../docs/:/usr/share/nginx/html/api/docs/
-      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
