--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -29,7 +29,8 @@ services:
       - ./.env
 
   frontend:
-    image: lanaremenyuk/foodgram_frontend:latest
+    build:
+      context: ../frontend
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
