--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -33,7 +33,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
-        proxy_pass http://backend:8000/;
+        proxy_pass http://backend:8000/admin/;
     }
 
     location / {
