--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 158.160.34.252;
+    server_name 84.201.132.228, localhost;
     server_tokens off;
     client_max_body_size 10m;
     root /var/html/;
