--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 158.160.34.252;
+    server_name thisisfoodgram.hopto.org;
     server_tokens off;
     client_max_body_size 10m;
     root /var/html/;
@@ -33,7 +33,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
-        proxy_pass http://backend:8000/admin/;
+        proxy_pass http://backend:8000;
     }
 
     location / {
